fix API header
